--- a/templates/moji_zadaci.html
+++ b/templates/moji_zadaci.html
@@ -40,7 +40,7 @@
         aria-haspopup="true"
         aria-expanded="false"
       >
-        Username
+        {{logiran}}
       </button>
       <div
         class="dropdown-menu dropdown-menu-right text-center"
