--- a/templates/kalendar.html
+++ b/templates/kalendar.html
@@ -38,13 +38,15 @@
         aria-haspopup="true"
         aria-expanded="false"
       >
-        A
+        {{logiran}}
       </button>
       <div
         class="dropdown-menu dropdown-menu-right text-center"
         aria-labelledby="dropdownMenuButton"
       >
-        <a class="dropdown-item" href="">Moj profil</a>
+        <a class="dropdown-item" href="#!user">Moj profil</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="#!postavke">Postavke</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="" ng-click="Odjava()">Odjava</a>
       </div>
