--- a/templates/postavke.html
+++ b/templates/postavke.html
@@ -55,7 +55,7 @@
 </nav>
 
 <div class="sredinaUser" ng-init="dohvatiMojeZadatke()">
-  <h1>pregled_zadatka.html</h1>
+  <h1>postavke.html</h1>
 </div>
 
 <!-- FOOTER -->
