Otvaranje zasebnog zadatka

--- a/templates/pregled_zadatka.html
+++ b/templates/pregled_zadatka.html
@@ -54,8 +54,20 @@
   </div>
 </nav>
 
-<div class="sredinaUser" ng-init="dohvatiMojeZadatke()">
-  <h1>pregled_zadatka.html</h1>
+<div class="sredinaUser" ng-init="PrikaziZasebniZadatak()">
+  {{zadatak_naziv}}
+  <br />
+  {{zadatak_datum_pocetka}}
+  <br />
+  {{zadatak_datum_zavrsetka}}
+  <br />
+  {{zadatak_izvrsitelj}}
+  <br />
+  {{zadatak_kreator}}
+  <br />
+  {{zadatak_stanje}}
+  <br />
+  {{zadatak_opis}}
 </div>
 
 <!-- FOOTER -->
