--- a/templates/kreirani_zadaci.html
+++ b/templates/kreirani_zadaci.html
@@ -60,7 +60,7 @@
     <!-- Trazilica -->
     <div class="d-inline-block form-group has-search w-50">
       <span class="fa fa-search form-control-feedback"></span>
-      <input type="text" class="form-control" placeholder="Pretraži.." />
+      <input type="text" class="form-control" placeholder="Pretraži.." ng-model="inputTekst" />
     </div>
     <!-- Sortiranje -->
     <div class="d-inline-block dropdown">
@@ -129,7 +129,7 @@
 
             <div class="row justify-content-end">
               <div class="col-3">
-                <a href="#!pregled_zadatka" class="btn btn-dark">
+                <a href="" ng-click="OtvoriZasebniZadatak(zadatak)" class="btn btn-dark">
                   <i class="fa fa-plus" aria-hidden="true"></i>
                 </a>
               </div>
