--- a/templates/moji_zadaci.html
+++ b/templates/moji_zadaci.html
@@ -143,7 +143,11 @@
 
             <div class="row justify-content-end">
               <div class="col-3 zadatak_button">
-                <a href="#!pregled_zadatka" class="btn btn-dark">
+                <a
+                  href=""
+                  ng-click="OtvoriZasebniZadatak(zadatak)"
+                  class="btn btn-dark"
+                >
                   <i class="fa fa-plus" aria-hidden="true"></i>
                 </a>
               </div>
