--- a/templates/moji_zadaci.html
+++ b/templates/moji_zadaci.html
@@ -111,7 +111,9 @@
           <div class="card-body">
             <div class="row justify-content-start" style="height: 50px;">
               <div class="col-3 zadatak_kreator">
-                {{zadatak.kreator}}
+                <a href="" ng-click="DohvatiDrugogKorisnika(zadatak.kreator)"
+                  >{{zadatak.kreator}}</a
+                >
               </div>
               <div class="col-6 align-self-center">
                 <h5 class="zadatak_naziv">
