--- a/templates/pregled_kreiranog_zadatka.html
+++ b/templates/pregled_kreiranog_zadatka.html
@@ -84,6 +84,9 @@
           </div>
         </div>
         <div class="form-group komentiranje text-right">
+          <button class="btn btn-dark" style="margin-right: 10px;" ng-click="">
+            <i class="fa fa-pencil fa-lg" aria-hidden="true"></i>
+          </button>
           <button class="btn btn-dark" ng-click="">
             <i class="fa fa-comments fa-lg" aria-hidden="true"></i>
           </button>
