--- a/templates/user.html
+++ b/templates/user.html
@@ -67,33 +67,29 @@
     <div class="container-small">
       <form>
         <div class="form-group">
-          <p for="exampleInputEmail1"><span>Ime:</span> {{info.ime}}</p>
+          <p><span>Ime:</span> {{info.ime}}</p>
         </div>
         <div class="form-group">
-          <p for="exampleInputEmail1"><span>Prezime:</span> {{info.prezime}}</p>
+          <p><span>Prezime:</span> {{info.prezime}}</p>
         </div>
         <div class="form-group">
-          <p for="exampleInputEmail1"><span>Email:</span> {{info.email}}</p>
+          <p><span>Email:</span> {{info.email}}</p>
         </div>
         <div class="form-group">
-          <p for="exampleInputEmail1"><span>Telefon:</span> {{info.tel}}</p>
+          <p><span>Telefon:</span> {{info.tel}}</p>
         </div>
         <div class="form-group">
           <p><span>Biografija:</span></p>
           <p>{{info.bio}}</p>
         </div>
         <div class="form-group">
-          <p for="exampleInputEmail1">
-            <span>Prebivalište:</span> {{info.prebivaliste}}
-          </p>
+          <p><span>Prebivalište:</span> {{info.prebivaliste}}</p>
         </div>
         <div class="form-group">
-          <p for="exampleInputEmail1">
-            <span>Datum rođenja:</span> {{info.datum_rodenja}}
-          </p>
+          <p><span>Datum rođenja:</span> {{info.datum_rodenja}}</p>
         </div>
         <div class="form-group">
-          <p for="exampleInputEmail1"><span>Spol:</span> {{info.spol}}</p>
+          <p><span>Spol:</span> {{info.spol}}</p>
         </div>
         <!--
         <div>
