--- a/templates/kreirani_zadaci.html
+++ b/templates/kreirani_zadaci.html
@@ -60,7 +60,12 @@
     <!-- Trazilica -->
     <div class="d-inline-block form-group has-search w-50">
       <span class="fa fa-search form-control-feedback"></span>
-      <input type="text" class="form-control" placeholder="Pretraži.." ng-model="inputTekst" />
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Pretraži.."
+        ng-model="inputTekst"
+      />
     </div>
     <!-- Sortiranje -->
     <div class="d-inline-block dropdown">
@@ -82,7 +87,6 @@
     </div>
   </div>
 
-  
   <!-- Zadaci -->
   <div class="container-fluid">
     <div class="row">
@@ -92,12 +96,10 @@
       >
         <div class="card text-center" style="width: 25rem; height: 320px;">
           <div class="card-body">
-            <div class="row justify-content-center" style="height: 50px;">
-              <div class="col-6 align-self-center">
-                <h5 class="zadatak_naziv">
-                  {{zadatak.naziv}}
-                </h5>
-              </div>
+            <div class="d-flex justify-content-center">
+              <h5 class="zadatak_naziv text-center">
+                {{zadatak.naziv}}
+              </h5>
             </div>
 
             <div class="row justify-content-center">
@@ -110,7 +112,7 @@
             </div>
 
             <div class="row justify-content-start">
-              <div class="col-4">
+              <div class="detalji" style="font-weight: 700;">
                 Detalji:
               </div>
             </div>
@@ -122,14 +124,21 @@
             </div>
 
             <div class="row justify-content-start">
-              <div class="col-6 zadatak_izvrsitelj">
-                Izvrsitelj: {{zadatak.izvrsitelj}}
+              <div class="zadatak_izvrsitelj">
+                Izvrsitelj:
+                <a href="" ng-click="DohvatiDrugogKorisnika(zadatak.izvrsitelj)"
+                  >{{zadatak.izvrsitelj}}</a
+                >
               </div>
             </div>
 
             <div class="row justify-content-end">
               <div class="col-3">
-                <a href="" ng-click="OtvoriZasebniZadatak(zadatak)" class="btn btn-dark">
+                <a
+                  href=""
+                  ng-click="OtvoriZasebniKreiraniZadatak(zadatak)"
+                  class="btn btn-dark"
+                >
                   <i class="fa fa-plus" aria-hidden="true"></i>
                 </a>
               </div>
@@ -139,7 +148,6 @@
       </article>
     </div>
   </div>
-</div>
 </div>
 
 <!-- FOOTER -->
