--- a/templates/kreirani_zadaci.html
+++ b/templates/kreirani_zadaci.html
@@ -56,9 +56,9 @@
 
 <div class="sredinaUser" ng-init="dohvatiKreiraneZadatke()">
   <!-- Izbornik -->
-  <div class="izbornikKreirani d-flex justify-content-sm-around">
+  <div class="izbornik d-flex justify-content-sm-around">
     <!-- Trazilica -->
-    <div class="d-inline-block form-group has-search w-50">
+    <div class="d-inline-block form-group has-search w-40">
       <span class="fa fa-search form-control-feedback"></span>
       <input
         type="text"
@@ -66,6 +66,17 @@
         placeholder="Pretraži.."
         ng-model="inputTekst"
       />
+    </div>
+    <!-- Novi zadatak -->
+    <div class="noviZadatak">
+      <button
+        type="d-inline-block button"
+        class="btn btn-dark"
+        ng-click="ModalNoviZadatak()"
+      >
+        <i class="fa fa-thumb-tack fa-lg"></i>
+      </button>
+      <p class="d-inline-block">Novi zadatak</p>
     </div>
     <!-- Sortiranje -->
     <div class="d-inline-block dropdown">
@@ -80,9 +91,24 @@
         Sortiraj po..
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="#">Action</a>
-        <a class="dropdown-item" href="#">Another action</a>
-        <a class="dropdown-item" href="#">Something else here</a>
+        <a class="dropdown-item" href="" ng-click="setOrderProperty('naziv')"
+          >Nazivu</a
+        >
+        <a class="dropdown-item" href="" ng-click="setOrderProperty('kreator')"
+          >Kreatoru</a
+        >
+        <a
+          class="dropdown-item"
+          href=""
+          ng-click="setOrderProperty('datum_pocetka')"
+          >Datumu početka</a
+        >
+        <a
+          class="dropdown-item"
+          href=""
+          ng-click="setOrderProperty('datum_zavrsetka')"
+          >Datumu završetka</a
+        >
       </div>
     </div>
   </div>
@@ -92,7 +118,7 @@
     <div class="row">
       <article
         class="align-top"
-        ng-repeat="zadatak in zadaci | filter: inputTekst "
+        ng-repeat="zadatak in zadaci  | orderBy:orderProperty | filter: inputTekst "
       >
         <div class="card text-center" style="width: 25rem; height: 320px;">
           <div class="card-body">
@@ -104,10 +130,11 @@
 
             <div class="row justify-content-center">
               <div class="col-10 zadatak_datumi">
-                {{zadatak.datum_pocetka}}
+                {{zadatak.datum_pocetka | date: 'dd-MM-yyyy' | promjenaFormata}}
                 <!--<i class="fa fa-hand-o-right" aria-hidden="true"></i>-->
                 <i class="fa fa-arrow-right datum_arrow" aria-hidden="true"></i>
-                {{zadatak.datum_zavrsetka}}
+                {{zadatak.datum_zavrsetka | date: 'dd-MM-yyyy' |
+                promjenaFormata}}
               </div>
             </div>
 
@@ -165,3 +192,95 @@
     </div>
   </div>
 </footer>
+
+<!-- Modal novi zadatak -->
+<div class="modal fade" id="modalNoviZadatak">
+  <div class="modal-dialog modal-lg" ng-init="DohvatiKorisnike()">
+    <div class="modal-content">
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title w-100 text-center">Novi zadatak</h4>
+        <button type="button" class="close" data-dismiss="modal">
+          &times;
+        </button>
+      </div>
+      <!-- Modal body -->
+      <div class="modal-body">
+        <div
+          class="alert {{alertClass}} alert-dismissible text-center"
+          ng-show="alertMsg"
+        >
+          <a href="" class="close" ng-click="closeMsg()" aria-label="close"
+            >&times;</a
+          >{{alertMessage}}
+        </div>
+
+        <form name="NoviZadatakForm" method="POST">
+          <div class="form-group">
+            <label for="inputNaziv">Naziv</label>
+            <input
+              type="text"
+              class="form-control"
+              id="inputNaziv"
+              placeholder="Naziv"
+              ng-model="regNaziv"
+            />
+          </div>
+
+          <div class="form-group">
+            <label for="inputDatumPocetka">Datum početka</label>
+            <input
+              type="date"
+              class="form-control"
+              id="inputDatumPocetka"
+              ng-model="regDatumPocetka"
+            />
+          </div>
+
+          <div class="form-group">
+            <label for="inputDatumZavrsetka">Datum završetka</label>
+            <input
+              type="date"
+              class="form-control"
+              id="inputDatumZavrsetka"
+              ng-model="regDatumZavrsetka"
+            />
+          </div>
+
+          <div class="form-group">
+            <label for="inputIzvrsitelj">Izvršitelj</label>
+            <select
+              class="form-control"
+              id="inputIzvrsitelj"
+              ng-model="regIzvrsitelj"
+              style="height: 40px;"
+              ng-options="korisnicko_ime for korisnicko_ime in korisnicka_imena"
+            >
+            </select>
+          </div>
+
+          <div class="form-group">
+            <label for="inputOpis">Opis</label>
+            <input
+              type="text"
+              class="form-control"
+              id="inputOpis"
+              placeholder="Opis"
+              ng-model="regOpis"
+            />
+          </div>
+        </form>
+      </div>
+
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button type="submit" ng-click="NoviZadatak()" class="btn btn-dark">
+          Dodaj
+        </button>
+        <button type="button" class="btn btn-danger" data-dismiss="modal">
+          Zatvori
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
