--- a/templates/pregled_zadatka.html
+++ b/templates/pregled_zadatka.html
@@ -64,10 +64,16 @@
           </h5>
         </div>
         <div class="form-group">
-          <p><span>Datum početka:</span> {{zadatak.datum_pocetka}}</p>
+          <p>
+            <span>Datum početka:</span> {{zadatak.datum_pocetka | date:
+            'dd-MM-yyyy' | promjenaFormata}}
+          </p>
         </div>
         <div class="form-group">
-          <p><span>Datum Završetka:</span> {{zadatak.datum_zavrsetka}}</p>
+          <p>
+            <span>Datum Završetka:</span> {{zadatak.datum_zavrsetka | date:
+            'dd-MM-yyyy' | promjenaFormata}}
+          </p>
         </div>
         <div class="form-group">
           <p><span>Kreator:</span> {{zadatak.kreator}}</p>
