--- a/templates/pregled_kreiranog_zadatka.html
+++ b/templates/pregled_kreiranog_zadatka.html
@@ -96,6 +96,9 @@
           <button class="btn btn-dark" ng-click="">
             <i class="fa fa-comments fa-lg" aria-hidden="true"></i>
           </button>
+          <button class="btn btn-dark" ng-click="">
+            <i class="fa fa-trash fa-lg" aria-hidden="true"></i>
+          </button>
         </div>
       </form>
     </div>
