--- a/templates/pregled_zadatka.html
+++ b/templates/pregled_zadatka.html
@@ -93,6 +93,9 @@
           <button class="btn btn-dark" ng-click="">
             <i class="fa fa-comments fa-lg" aria-hidden="true"></i>
           </button>
+          <button class="btn btn-dark" ng-click="">
+            <i class="fa fa-check fa-lg" aria-hidden="true"></i>
+          </button>
         </div>
       </form>
     </div>
